reviews spacing fix

--- a/src/components/ServicePreview/ServicePreview.module.css
+++ b/src/components/ServicePreview/ServicePreview.module.css
@@ -67,12 +67,14 @@
 
 .imgContainer {
   position: relative;
-  width: 100%;
+  width: 350px;
   height: 350px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .img {
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .icon {
@@ -198,6 +200,10 @@
     padding: 2rem;
     margin-bottom: 5rem;
     border: 1px solid var(--gray);
+  }
+
+  .imgContainer {
+    width: 100%;
   }
 
   .heading {
