--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -4,8 +4,8 @@
   border-bottom: 1px solid var(--lightBlack);
   height: 100%;
   overflow: hidden;
-  padding: 10rem 5rem;
-  padding-bottom: 25rem;
+  /* padding: 10rem 5rem; */
+  padding-bottom: 20rem;
 }
 
 .top {
@@ -28,7 +28,6 @@
   height: 100%;
   width: 100%;
 }
-
 
 .heading,
 .copy {
